--- a/install_server.yml
+++ b/install_server.yml
@@ -98,6 +98,16 @@
        path: "/var/log/auth.log"
        state: touch
 
+    - name: (fail2ban) custom fail2ban config
+      copy:
+       src: "templates/jail.local"
+       dest: "/etc/fail2ban/jail.local"
+       owner: "root"
+       group: "root"
+       mode: "0644"
+       # shouldn't be needed, just in case
+       backup: yes
+
     - name: (fail2ban) enable
       service:
         name: fail2ban
